--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,6 +10,13 @@
   </head>
 
   <body>
-    <%= yield %>
+    <!-- パーシャルフォームheaderの呼び出し -->
+    <%= render "shared/header" %>
+
+    <div class="container">
+      <div class="row">
+        <%= yield %>
+      </div>
+    </div>
   </body>
 </html>
