--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -10,7 +10,7 @@
         <%= link_to "ホーム", root_path, class: "nav-link" %>
       </li>
       <li class="nav-item">
-        <%= link_to "レシピ投稿", root_path, class: "nav-link" %>
+        <%= link_to "レシピ投稿", new_recipe_path, class: "nav-link" %>
       </li>
     </ul>
     <form class="form-inline my-2 my-lg-0">
