--- a/app/views/recipes/show.html.erb
+++ b/app/views/recipes/show.html.erb
@@ -1,10 +1,18 @@
 <div class="col-md-10 offset-md-1 mt-5">
-  <h2><%= @recipe.title %></h2>
+  <div class="row">
+    <div class="col-md-4 mb-4">
+      <!-- ビューヘルパー利用 -->
+      <%= show_recipe_image @recipe %>
+    </div>
+    <div class="col-md-8">
+      <h2><%= @recipe.title %></h2>
+        <hr>
+        <b><%= t '.material' %>：</b><%= simple_format @recipe.material %>
+    </div>
+  </div>
   <hr>
-  <b>材料: </b><%= simple_format @recipe.material %>
-  <hr>
-  <h4>作り方</h4>
+  <h4><%= t '.body' %></h4>
   <%= simple_format @recipe.body %>
   <hr>
-  <b>ズボラアドバイス: </b><%= simple_format @recipe.point %>
+  <b><%= t '.point' %>：</b><%= simple_format @recipe.point %>
 </div>
