--- a/app/views/recipes/_form.html.erb
+++ b/app/views/recipes/_form.html.erb
@@ -6,6 +6,10 @@
     <%= form.text_field :title, class: "form-control" %>
   </div>
   <div class="form-group">
+    <%= form.label :category_id %>
+    <%= form.collection_select :category_id, Category.all, :id, :name , { include_blank: t(".include_blank") },  { class: "form-control" } %>
+  </div>
+  <div class="form-group">
     <%= form.label :new_image %>
     <%= form.file_field :new_image, class: "form-control" %>
   </div>
