--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -2,16 +2,31 @@
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarToggler" aria-controls="navbarTogglerDemo03" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
-      <!-- ロゴ画像はaタグnavbar-brandの背景画像としてcssで記述 -->
-      <a class="navbar-brand" href=".."></a>
+    <!-- ロゴ画像はaタグnavbar-brandの背景画像としてcssで記述 -->
+    <a class="navbar-brand" href=".."></a>
   <div class="collapse navbar-collapse" id="navbarToggler">
     <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
       <li class="nav-item">
-        <%= link_to "ホーム", root_path, class: "nav-link" %>
+        <%= link_to t(".home"), root_path, class: "nav-link" %>
       </li>
       <li class="nav-item">
-        <%= link_to "レシピ投稿", new_recipe_path, class: "nav-link" %>
+        <%= link_to t(".new_recipe"), new_recipe_path, class: "nav-link" %>
       </li>
+      <% if user_signed_in? %>
+        <li class="nav-item">
+          <%= link_to t(".edit_registration"), edit_user_registration_path, class: "nav-link" %>
+        </li>
+        <li class="nav-item">
+          <%= link_to t(".log_out"), destroy_user_session_path, method: :delete, class: "nav-link" %>
+        </li>
+      <% else %>
+        <li class="nav-item">
+          <%= link_to t(".new_registration"), new_user_registration_path, class: "nav-link" %>
+        </li>
+        <li class="nav-item">
+          <%= link_to t(".log_in"), new_user_session_path, class: "nav-link" %>
+        </li>
+      <% end %>
     </ul>
     <form class="form-inline my-2 my-lg-0">
       <input class="form-control mr-sm-2" type="search" placeholder="レシピを検索する" aria-label="Search">
