レビュー機能の搭載

--- a/app/views/recipes/show.html.erb
+++ b/app/views/recipes/show.html.erb
@@ -17,4 +17,10 @@
   <%= simple_format @recipe.body %>
   <hr>
   <b><%= t '.point' %>：</b><%= simple_format @recipe.point %>
+  <% if user_signed_in? %>
+    <%= link_to t(".review_new"), new_recipe_review_path(@recipe), class: "btn btn-info" %>
+  <% end %>
+  <%= link_to t(".return"), recipes_path, class: "btn btn-secondary" %>
+  <hr>
+  <%= render partial: "reviews/review", collection: @recipe.reviews %>
 </div>
