--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -28,9 +28,9 @@
         </li>
       <% end %>
     </ul>
-    <form class="form-inline my-2 my-lg-0">
-      <input class="form-control mr-sm-2" type="search" placeholder="レシピを検索する" aria-label="Search">
-      <button class="btn btn-outline-success my-2 my-sm-0" type="submit">検索</button>
-    </form>
+    <%= search_form_for @q, class: "form-inline my-2 my-lg-0" do |f| %>
+      <%= f.search_field :title_or_body_or_material_cont, class: "form-control mr-sm-2" %>
+      <%= f.submit t(".search"), class: "btn btn-info my-2 my-sm-0" %>
+    <% end %>
   </div>
 </nav>
