--- a/app/views/categories/index.html.erb
+++ b/app/views/categories/index.html.erb
@@ -9,7 +9,7 @@
 <% end %>
 -->
   <div class="col-lg-3 col-md-4 col-sm-6 mb-3">
-    <%= link_to image_tag ("img_warning.png", width: '100'), category_path(1) %>
+    <%= link_to (image_tag ("img_warning.png")), category_path(1) %>
     <%= link_to "鶏肉", category_path(1) %>
     <%= link_to "豚肉", category_path(2) %>
     <%= link_to "牛肉", category_path(3) %>
