--- a/app/views/categories/index.html.erb
+++ b/app/views/categories/index.html.erb
@@ -1,6 +1,5 @@
 <div class="col-md-10 offset-md-1 mt-3">
   <h2 class="text-center"><%= t '.title' %></h2>
-</div>
 <!-- 
 <% @categories.each do |category| %>
   <div class="col-lg-3 col-md-4 col-sm-6 mb-3">
@@ -8,15 +7,18 @@
   </div>
 <% end %>
 -->
-  <div class="col-lg-3 col-md-4 col-sm-6 mb-3">
-    <%= link_to (image_tag ("img_warning.png")), category_path(1) %>
-    <%= link_to "鶏肉", category_path(1) %>
-    <%= link_to "豚肉", category_path(2) %>
-    <%= link_to "牛肉", category_path(3) %>
-    <%= link_to "ごはんもの", category_path(4) %>
-    <%= link_to "魚", category_path(5) %>
-    <%= link_to "野菜", category_path(6) %>
-    <%= link_to "パスタ", category_path(7) %>
-    <%= link_to "麺", category_path(8) %>
+<div class="container">
+  <div class="row">
+    <div class="col-md-3"><%= link_to "鶏肉", category_path(1) %></div>
+    <div class="col-md-3"><%= link_to "豚肉", category_path(2) %></div>
+    <div class="col-md-3"><%= link_to "牛肉", category_path(3) %></div>
+    <div class="col-md-3"><%= link_to "ごはんもの", category_path(4) %></div>
   </div>
+  <div class="row">
+    <div class="col-md-3"><%= link_to "魚", category_path(5) %></div>
+    <div class="col-md-3"><%= link_to "野菜", category_path(6) %></div>
+    <div class="col-md-3"><%= link_to "パスタ", category_path(7) %></div>
+    <div class="col-md-3"><%= link_to "麺", category_path(8) %></div>
+  </div>
+  <div class="col-md-3"><%= link_to (image_tag ("img_warning.png")), category_path(1) %></div>
 </div>
