--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -33,11 +33,9 @@
       </div>
 
       <div class="form-group row">
-        <div class="col-sm-2">
-        <%= f.submit t(".submit"), class: "btn btn-primary" %>
-        </div>
-        <div class="col-sm-2 d-flex align-items-center">
-        <%= render "devise/shared/links" %>
+        <div class="col-md-2">
+          <%= f.submit t(".submit"), class: "btn btn-primary" %>
+          <%= render "devise/shared/links" %>
         </div>
       </div>
     <% end %>
