--- a/app/views/recipes/index.html.erb
+++ b/app/views/recipes/index.html.erb
@@ -1,3 +1,30 @@
+<div id="example-2" class="col-12 carousel slide" data-ride="carousel" style="width:400px">
+  <div class="carousel-inner">
+    <div class="carousel-item active">
+      <img src=
+      "https://s3-ap-northeast-1.amazonaws.com/zuborameshiimage/meat.png"
+      alt="First slide">
+    </div>
+    <div class="carousel-item">
+      <img src=
+      "https://s3-ap-northeast-1.amazonaws.com/zuborameshiimage/fish.png"
+      alt="Second slide">
+    </div>
+    <div class="carousel-item">
+      <img src=
+      "https://s3-ap-northeast-1.amazonaws.com/zuborameshiimage/veg.png"
+      alt="Third slide">
+    </div>
+        <a class="carousel-control-prev" href="#example-2" role="button" data-slide="prev">
+      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+      <span class="sr-only">Previous</span>
+    </a>
+    <a class="carousel-control-next" href="#example-2" role="button" data-slide="next">
+      <span class="carousel-control-next-icon" aria-hidden="true"></span>
+      <span class="sr-only">Next</span>
+  </div>
+
+</div>
 <% @recipes.each do |recipe| %>
   <div class="col-lg-3 col-md-4 col-sm-6 mb-3">
     <%= show_recipe_image recipe %>
