--- a/app/views/recipes/index.html.erb
+++ b/app/views/recipes/index.html.erb
@@ -10,6 +10,8 @@
     <hr>
     <p><b><%= t ".point" %></b><br>
     <%= t (recipe.point) %></p>
+    <hr>
+    <p><div class = "iine_button">いいね <%= recipe.likes_count %></div></p>
   </div>
 <% end %>
 <div class="col-12">
