むずかしいね機能搭載

--- a/app/views/recipes/index.html.erb
+++ b/app/views/recipes/index.html.erb
@@ -12,6 +12,7 @@
     <%= t (recipe.point) %></p>
     <hr>
     <p><div class = "iine_button">いいね <%= recipe.likes_count %></div></p>
+    <p><div class = "muzukasiine_button">むずかしいね <%= recipe.hards_count %></div></p>
   </div>
 <% end %>
 <div class="col-12">
