ボタンデザインの修正

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -70,3 +70,16 @@ body    {
     border-radius: 100px;
     font-weight: bold;
  }
+
+.buttons {  
+    width: 100%;
+    margin: 0 auto;
+}  
+.button1 {  
+    width: 50%;
+    float: left;
+}  
+.button2 {  
+    width: 50%;
+    float: left;
+}  
