--- a/app/views/recipes/index.html.erb
+++ b/app/views/recipes/index.html.erb
@@ -11,8 +11,10 @@
     <p><b><%= t ".point" %></b><br>
     <%= t (recipe.point) %></p>
     <hr>
-    <p><div class = "iine_button">いいね <%= recipe.likes.count %></div></p>
-    <p><div class = "muzukasiine_button">むずかしいね <%= recipe.hards.count %></div></p>
+      <div class="buttons row mt-4">
+        <div class="button1"><div class = "iine_button">いいね <%= recipe.likes_count %></div></div>
+        <div class="button2"><div class = "muzukasiine_button">むずかしいね <%= recipe.hards_count %></div></div>
+      </div>
   </div>
 <% end %>
 <div class="col-12">
