--- a/app/views/recipes/show.html.erb
+++ b/app/views/recipes/show.html.erb
@@ -3,10 +3,17 @@
     <div class="col-md-4 mb-4">
       <!-- ビューヘルパー利用 -->
       <%= show_recipe_image @recipe %>
-      <div class="buttons row mt-4">
-        <div class="button1"><%= render 'likes/like', recipe: @recipe %></div>
-        <div class="button2"><%= render 'hards/hard', recipe: @recipe %></div>
-      </div>
+      <% if user_signed_in? %>
+        <div class="buttons row mt-4">
+          <div class="button1"><%= render 'likes/like', recipe: @recipe %></div>
+          <div class="button2"><%= render 'hards/hard', recipe: @recipe %></div>
+        </div>
+      <% else %>
+        <div class="buttons row mt-4">
+          <div class="button1"><div class = "iine_button">いいね <%= @recipe.likes_count %></div></div>
+          <div class="button2"><div class = "muzukasiine_button">むずかしいね <%= @recipe.hards_count %></div></div>
+        </div>
+      <% end %>
     </div>
     <div class="col-md-8">
       <h2><%= @recipe.title %></h2>
