ファビコンの追加

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -14,7 +14,7 @@
 @import "bootstrap";
 
 .navbar-brand {
-  background: url("/images/logo.png") no-repeat left center;
+  background: url("https://s3-ap-northeast-1.amazonaws.com/zuborameshiimage/logo.png") no-repeat left center;
   background-size: contain;
   height: 50px;
   width: 153px;
