--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -50,9 +50,10 @@
         <%= f.submit t(".submit"), class: "btn btn-primary" %>
       </div>
     <% end %>
-
+    <hr>
     <div class="form-inline mt-2">
-      <%= button_to t(".account_delete"), registration_path(resource_name), data: { confirm: t(".confirm") }, method: :delete, class: "btn btn-warning" %>
+      <%= link_to t(".log_out"), destroy_user_session_path, method: :delete, class: "btn btn-secondary ml-2" %>
+      <%= button_to t(".account_delete"), registration_path(resource_name), data: { confirm: t(".confirm") }, method: :delete, class: "btn btn-warning ml-2" %>
       <%= link_to t(".return"), :back, class: "btn btn-secondary ml-2" %>
     </div>
   </div>
