--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -10,22 +10,22 @@
         <%= link_to t(".home"), root_path, class: "nav-link" %>
       </li>
       <li class="nav-item">
-        <%= link_to t(".new_recipe"), new_recipe_path, class: "nav-link" %>
+        <%= link_to t(".all_recipe"), recipes_all_path, class: "nav-link" %>
       </li>
       <li class="nav-item">
         <%= link_to t(".category"), categories_path, class: "nav-link" %>
+      </li>
+      <li class="nav-item">
+        <%= link_to t(".howto"), howto_recipes_path, class: "nav-link" %>
+      </li>
+      <li class="nav-item">
+        <%= link_to t(".about"), about_path, class: "nav-link" %>
       </li>
       <% if user_signed_in? %>
         <li class="nav-item">
           <%= link_to t(".edit_registration"), edit_user_registration_path, class: "nav-link" %>
         </li>
-        <li class="nav-item">
-          <%= link_to t(".log_out"), destroy_user_session_path, method: :delete, class: "nav-link" %>
-        </li>
       <% else %>
-        <li class="nav-item">
-          <%= link_to t(".new_registration"), new_user_registration_path, class: "nav-link" %>
-        </li>
         <li class="nav-item">
           <%= link_to t(".log_in"), new_user_session_path, class: "nav-link" %>
         </li>
