カテゴリ一覧ページの修正

--- a/app/views/categories/show.html.erb
+++ b/app/views/categories/show.html.erb
@@ -1,5 +1,5 @@
 <% @recipes.each do |recipe| %>
-  <div class="col-lg-4 col-md-4 col-sm-6 mb-3">
+  <div class="col-lg-4 col-md-4 col-sm-6 mb-3 text-center">
     <%= show_recipe_image recipe %>
     <h4 class="mt-2"><%= link_to recipe.title, recipe_path(recipe) %></h4>
     <p><b><%= t '.category' %>：</b><%= recipe.category&.name %></p>
