--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -16,7 +16,7 @@
         <%= link_to t(".category"), categories_path, class: "nav-link" %>
       </li>
       <li class="nav-item">
-        <%= link_to t(".howto"), howto_recipes_path, class: "nav-link" %>
+        <%= link_to t(".howto"), howtos_path, class: "nav-link" %>
       </li>
       <% if user_signed_in? %>
         <li class="nav-item">
