AR機能のテスト

--- a/app/views/howtos/index.html.erb
+++ b/app/views/howtos/index.html.erb
@@ -11,3 +11,7 @@
     <% end %>
   </div>
 </div>
+
+<a href="https://s3-ap-northeast-1.amazonaws.com/zuborameshiimage/test.usdz" rel="ar">
+<img src="https://s3-ap-northeast-1.amazonaws.com/zuborameshiimage/img_warning.png">
+</a>
