--- a/app/views/howtos/show.html.erb
+++ b/app/views/howtos/show.html.erb
@@ -2,6 +2,10 @@
   <div class="row">
     <div class="col-md-4 mb-4">
     <% if @howto.image.attached? %>
+    <a href="https://s3-ap-northeast-1.amazonaws.com/zuborameshiimage/sanma.usdz" rel="ar">
+      <%= image_tag @howto.image.variant(resize: "300x300"), class: "img-thumbnail" %>
+    </a>
+    <% elsif @howto.image.attached? %>
       <%= image_tag @howto.image.variant(resize: "300x300"), class: "img-thumbnail" %>
     <% else %>
       <%= image_tag "img_warning.png", class: "img-thumbnail" %>
