--- a/app/views/howtos/show.html.erb
+++ b/app/views/howtos/show.html.erb
@@ -2,11 +2,11 @@
   <div class="row">
     <div class="col-md-4 mb-4">
     <% if @howto.image.attached? %>
-    <a href= <%= @howto.url %>>
-    <%= puts "以下URL" %>
-    <%= puts @howto.url %>
-    <%= link_to image_tag(@howto.image.variant(resize: "300x300"), class: "img-thumbnail"), "#{@howto.url}" %>
+    <a href="<%= @howto.url %>" rel="ar">
+      <%= image_tag @howto.image.variant(resize: "300x300"), class: "img-thumbnail" %>
     </a>
+    <% elsif @howto.image.attached? %>
+      <%= image_tag @howto.image.variant(resize: "300x300"), class: "img-thumbnail" %>
     <% else %>
       <%= image_tag "img_warning.png", class: "img-thumbnail" %>
     <% end %>
