--- a/app/views/howtos/show.html.erb
+++ b/app/views/howtos/show.html.erb
@@ -1,12 +1,12 @@
 <div class="col-md-10 offset-md-1 mt-5">
   <div class="row">
     <div class="col-md-4 mb-4">
-    <% if @howto.image.attached? %>
+    <% if @howto.url.blank? && @howto.image.attached? %>
+      <%= image_tag @howto.image.variant(resize: "300x300"), class: "img-thumbnail" %>
+    <% elsif @howto.image.attached? %>
     <a href="<%= @howto.url %>" rel="ar">
       <%= image_tag @howto.image.variant(resize: "300x300"), class: "img-thumbnail" %>
     </a>
-    <% elsif @howto.image.attached? %>
-      <%= image_tag @howto.image.variant(resize: "300x300"), class: "img-thumbnail" %>
     <% else %>
       <%= image_tag "img_warning.png", class: "img-thumbnail" %>
     <% end %>
