--- a/app/views/howtos/index.html.erb
+++ b/app/views/howtos/index.html.erb
@@ -3,7 +3,15 @@
   <div class="row">
     <% @howtos.each do |howto| %>
       <div class="col-md-4">
-        <%= show_howto_image howto %>
+        <% if howto.url.blank? && howto.image.attached? %>
+          <%= image_tag howto.image.variant(resize: "300x300"), class: "img-thumbnail" %>
+        <% elsif howto.image.attached? %>
+        <a href="<%= howto.url %>" rel="ar">
+          <%= image_tag howto.image.variant(resize: "300x300"), class: "img-thumbnail" %>
+        </a>
+        <% else %>
+          <%= image_tag "img_warning.png", class: "img-thumbnail" %>
+        <% end %>
         <p>
           <%= link_to howto.title, howto_path(howto) %>
         </p>
