いいねボタンのデザイン修正

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -50,10 +50,10 @@ body    {
 }
 
 .iine_button{
-    background: linear-gradient(to right, #feb400, #FFE300);
+    background: #FF9933;
     line-height: 42px;
-    color: #6d3701;
     font-size: 14px;
+    color: #090b0b;
     display: inline-block;
     padding: 0 18px;
     border-radius: 100px;
@@ -61,9 +61,9 @@ body    {
  }
 
 .muzukasiine_button{
-    background: linear-gradient(to right, #feb400, #FFE300);
+    background: #F6F4F4;
     line-height: 42px;
-    color: #6d3701;
+    color: #090b0b;
     font-size: 14px;
     display: inline-block;
     padding: 0 18px;
