--- a/app/views/recipes/index.html.erb
+++ b/app/views/recipes/index.html.erb
@@ -10,8 +10,8 @@
     <%= t (recipe.point) %></p>
     <hr>
       <div class="buttons row mt-4">
-        <div class="button1"><div class = "iine_button">いいね <%= recipe.likes_count %></div></div>
-        <div class="button2"><div class = "muzukasiine_button">むずかしいね <%= recipe.hards_count %></div></div>
+        <div class="button1"><div class = "iine_button">😋 <%= recipe.likes_count %></div></div>
+        <div class="button2"><div class = "muzukasiine_button">😵 <%= recipe.hards_count %></div></div>
       </div>
   </div>
 <% end %>
