--- a/app/views/recipes/all.html.erb
+++ b/app/views/recipes/all.html.erb
@@ -2,6 +2,7 @@
   <div class="col-lg-4 col-md-4 col-sm-6 mb-3 text-center">
     <%= show_recipe_image recipe %>
     <h4 class="mt-2"><%= link_to recipe.title, recipe_path(recipe) %></h4>
+    <hr>
     <p>
       <b><%= t '.category' %></b><br>
       <%= recipe.category&.name %>
@@ -12,9 +13,14 @@
       <%= t (recipe.point) %>
     </p>
     <hr>
-      <div class="buttons row mt-4">
-        <div class="button1"><div class = "iine_button">😋 <%= recipe.likes_count %></div></div>
-        <div class="button2"><div class = "muzukasiine_button">😵 <%= recipe.hards_count %></div></div>
+      <div class="buttons row mt-4 text-center">
+        <div class="button1 iine_button message">
+          <a>😋 <%= recipe.likes_count %><span class="remark">いいね！</span></a>
+        </div>
+        <div class="button2 muzukasiine_button message2">
+          <a>😵 <%= recipe.hards_count %><span class="remark">むずかしいね！</span></a>
+        </div>
+        <p class="padding"></p>
       </div>
   </div>
 <% end %>
