リンク関連の修正

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -102,3 +102,8 @@ body    {
 .padding {
     padding: 50px;
 }
+
+a:link {color:#090b0b;}
+a:visited{color:#090b0b;} 
+a:hover{color:#090b0b;;} 
+a:active{color:#090b0b;;} 
