--- a/app/views/categories/show.html.erb
+++ b/app/views/categories/show.html.erb
@@ -3,7 +3,8 @@
     <%= show_recipe_image recipe %>
     <h4 class="mt-2"><%= link_to recipe.title, recipe_path(recipe) %></h4>
     <hr>
-    <p><b><%= t '.category' %>：</b><%= recipe.category&.name %></p>
+    <p><b><%= link_to "#{t '.category'}", categories_path %>：</b>
+    <%= link_to "#{recipe.category&.name}", category_path("#{recipe.category_id}") %></p>
     <hr>
     <b><%= t '.material' %></b>
     <div><%= simple_format recipe.material %></div>
