--- a/app/views/categories/index.html.erb
+++ b/app/views/categories/index.html.erb
@@ -39,7 +39,7 @@
     <div class="col-lg-4 col-md-6 col-sm-6 mb-3">
       <%= link_to image_tag('c8.png', {:size => "300x300", :border => '0', :alt => '麺類'}), category_path(8) %>
       <br>
-      <%= link_to "麺", category_path(8) %>
+      <%= link_to "麺類", category_path(8) %>
     </div>
   </div>
 </div>
