--- a/app/views/recipes/index.html.erb
+++ b/app/views/recipes/index.html.erb
@@ -47,7 +47,7 @@
     <div class="col-lg-3 col-md-4 col-sm-6 mb-3">
       <%= link_to image_tag('c8.png', {:size => "200x200", :border => '0', :alt => '麺類'}), category_path(8) %>
       <br>
-      <%= link_to "麺", category_path(8) %>
+      <%= link_to "麺類", category_path(8) %>
     </div>
   </div>
 </div>
