--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,10 +14,8 @@
   </head>
 
   <body>
-    <!-- パーシャルフォームheaderの呼び出し -->
     <%= render "shared/header" %>
     <div class="container">
-      <!-- パーシャルフォームflashの呼び出し -->
       <div class="row">
         <div class="col-md-12">
           <%= render "shared/flash" %>
@@ -27,5 +25,6 @@
         <%= yield %>
       </div>
     </div>
+    <footer class="footer">フッタ</footer>
   </body>
 </html>
