--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -25,6 +25,8 @@
         <%= yield %>
       </div>
     </div>
-    <footer class="footer">フッタ</footer>
+    <footer class="footer">
+    <%= render "shared/footer" %>
+    </footer>
   </body>
 </html>
