--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -4,7 +4,7 @@
   </button>
     <a class="navbar-brand" href=".."></a>
   <div class="collapse navbar-collapse" id="navbarToggler">
-    <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
+    <ul class="navbar-nav mr-auto mt-2 ">
       <li class="nav-item">
         <%= link_to t(".home"), root_path, class: "nav-link" %>
       </li>
