--- a/app/views/devise/passwords/new.html.erb
+++ b/app/views/devise/passwords/new.html.erb
@@ -1,16 +1,22 @@
-<h2>Forgot your password?</h2>
-
-<%= form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :post }) do |f| %>
-  <%= render "devise/shared/error_messages", resource: resource %>
-
-  <div class="field">
-    <%= f.label :email %><br />
-    <%= f.email_field :email, autofocus: true, autocomplete: "email" %>
+<div class="title_background">
+  <div class="page-header">
+    <h2>パスワード再設定メールの送信</h2>
   </div>
+  <p>以下の欄に登録したメールアドレスをご入力ください。<br>パスワード再設定について、メールでご連絡いたします。
+  </p>
+</div>
+<div class="pass_new_background">
+  <div class="pass_new">
+    <%= form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :post }) do |f| %>
 
-  <div class="actions">
-    <%= f.submit "Send me reset password instructions" %>
+      <div class="email">
+        <%= f.label :email %><br />
+        <p class="in_field"><%= f.email_field :email, autofocus: true, autocomplete: "email" %></p>
+      </div>
+
+      <div class="actions">
+        <p class="in_field"><%= f.submit "パスワード再設定メールを送る",:class=>"form_login_btn col-xs-12" %></p>
+      </div>
+    <% end %>
   </div>
-<% end %>
-
-<%= render "devise/shared/links" %>
+</div>
