--- a/app/views/categories/show.html.erb
+++ b/app/views/categories/show.html.erb
@@ -22,4 +22,6 @@
       </div>
   </div>
 <% end %>
+<div class="col-3 right">
+  <%= link_to t(".return"), :back, class: "btn btn-secondary ml-2" %>
 </div>
