--- a/app/views/howtos/index.html.erb
+++ b/app/views/howtos/index.html.erb
@@ -14,3 +14,9 @@
     </h4>
   </div>
 <% end %>
+<hr> 
+<br>
+<hr>
+<div class="col-3 right">
+<%= link_to t(".return"), :back, class: "btn btn-secondary ml-2" %>
+</div>
