--- a/app/views/howtos/show.html.erb
+++ b/app/views/howtos/show.html.erb
@@ -13,7 +13,12 @@
     </div>
     <div class="col-md-8">
       <h2><%= @howto.title %></h2>
-        <b><%= t '.howto' %>：</b><%= simple_format @howto.body %>
+      <hr>
+      <b><%= t '.howto' %>：</b><%= simple_format @howto.body %>
+      <hr>
+    </div>
+    <div class="col-3 right">
+      <%= link_to t(".return"), :back, class: "btn btn-secondary ml-2" %>
     </div>
   </div>
 </div>
