--- a/app/views/reviews/_review.html.erb
+++ b/app/views/reviews/_review.html.erb
@@ -7,7 +7,9 @@
       <%= image_tag "img_warning.png", class: "img-thumbnail", width: 60 %>
     <% end %>
     <%= link_to review.user.user_name, recipe_review_path(review.recipe, review) %>
-    <%= review.evaluation %>
+    <div class="muzukasiine_button message2">
+      <%= review.evaluation %>
+    </div>
   </div>
   <div>
     <small><%= review.created_at.strftime("%Y年%m月%d日") %></small>
