軽微な修正

--- a/app/views/howtos/show.html.erb
+++ b/app/views/howtos/show.html.erb
@@ -17,6 +17,7 @@
       <b><%= t '.howto' %>：</b><%= simple_format @howto.body %>
       <hr>
     </div>
+    <p class="padding"></p>
     <div class="col-3 right">
       <%= link_to t(".return"), :back, class: "btn btn-secondary ml-2" %>
     </div>
