--- a/app/views/categories/show.html.erb
+++ b/app/views/categories/show.html.erb
@@ -22,6 +22,7 @@
       </div>
   </div>
 <% end %>
+<p class="padding"></p>
 <div class="col-3 right">
   <%= link_to t(".return"), :back, class: "btn btn-secondary ml-2" %>
 </div>
