--- a/app/views/shared/_carousel.html.erb
+++ b/app/views/shared/_carousel.html.erb
@@ -3,9 +3,13 @@
     <li data-target="#carousel-2" data-slide-to="0" class="active"></li>
     <li data-target="#carousel-2" data-slide-to="1"></li>
     <li data-target="#carousel-2" data-slide-to="2"></li>
+    <li data-target="#carousel-2" data-slide-to="3"></li>
   </ol>
   <div class="carousel-inner" role="listbox">
     <div class="carousel-item active">
+      <%= link_to image_tag('cp.png', {:size => "1200x400", :class => 'd-block img-fluid', :alt => 'responsive image'}), campaign_recipes_path %>
+    </div>
+    <div class="carousel-item">
       <%= link_to image_tag('meat.png', {:size => "1200x400", :class => 'd-block img-fluid', :alt => 'responsive image'}), category_path(1) %>
     </div>
     <div class="carousel-item">
