--- a/app/views/categories/show.html.erb
+++ b/app/views/categories/show.html.erb
@@ -3,14 +3,18 @@
     <%= show_recipe_image recipe %>
     <h4 class="mt-2"><%= link_to recipe.title, recipe_path(recipe) %></h4>
     <hr>
-    <p><b><%= link_to "#{t '.category'}", categories_path %>：</b>
-    <%= link_to "#{recipe.category&.name}", category_path("#{recipe.category_id}") %></p>
+    <p>
+      <b><%= link_to "#{t '.category'}", categories_path %>：</b>
+      <%= link_to "#{recipe.category&.name}", category_path("#{recipe.category_id}") %>
+    </p>
     <hr>
     <b><%= t '.material' %></b>
     <div><%= simple_format recipe.material %></div>
     <hr>
-    <p><b><%= t ".point" %></b><br>
-    <%= t (recipe.point) %></p>
+    <p>
+      <b><%= t ".point" %></b><br>
+      <%= t (recipe.point) %>
+    </p>
     <hr>
       <div class="buttons row mt-4">
         <div class="button1 iine_button message">
@@ -26,3 +30,4 @@
 <div class="col-3 right">
   <%= link_to t(".return"), :back, class: "btn btn-secondary ml-2" %>
 </div>
+<p class="padding"></p>
