--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -1,7 +1,6 @@
 <div class="col-md-8 offset-md-2 mt-3">
   <div class="user-box">
     <h3 class="text-center"><%= t ".title" %></h3>
-
     <%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f| %>
       <%= devise_error_messages! %>
       <div class="form-group">
@@ -58,4 +57,8 @@
     </div>
   </div>
 </div>
+<p class="padding"></p>
+<p class="padding"></p>
+<p class="padding"></p>
+<p class="padding"></p>
 <p class="padding"></p>
